--- a/src/style/master/_base.scss
+++ b/src/style/master/_base.scss
@@ -4,12 +4,14 @@
 }
 
 $darkBeige: #B2988B;
+$brown: #3E291F;
+$whiteLite: #eae9e4;
 
 body {
   margin: 0;
   background-color: #5D514A;
   font-family: Georgia, serif;
-  background-image: url("assets/body-background.jpg");
+  background-image: url("http://forumfiles.ru/files/0019/71/cd/49614.jpg");
   background-size: contain;
 }
 
