--- a/src/style/master/_title.scss
+++ b/src/style/master/_title.scss
@@ -1,5 +1,5 @@
 #pun-title {
-  background-image: url("./assets/header-background.jpg");
+  background-image: url("http://forumfiles.ru/files/0019/71/cd/55017.jpg");
   background-size: cover;
   background-position: center;
   height: 420px;
