--- a/src/style/main/_main.scss
+++ b/src/style/main/_main.scss
@@ -1,3 +1,104 @@
 #pun-main {
   background-color: $darkBeige;
+
+  h1 {
+    display: none;
+  }
+}
+
+.category {
+
+  h2 {
+    background-color: $whiteLite;
+    font-family: "AO TYPE";
+    text-align: center;
+    font-size: 40px;
+    padding: 8px 0;
+    color: $brown;
+    margin: 20px 0;
+  }
+
+  table {
+
+  }
+
+  thead {
+    display: none;
+  }
+  //Тег TR
+  /*.alt1 и alt2 – это строчки таблицы в категории
+  Т.к. тег tr невидимый, а добавить background нужно, то воспользуемся ::before
+  */
+  .alt1, .alt2 {
+    position: relative;
+    //border: 4px solid red;
+  }
+
+  //Тег TD
+  /* самая левая ячейка. tcl – table cell left
+  Ячейки здесь генерятся интересно, кроме первой (tcl) и последней (tcr) все
+  имеют порядковый номер (tcX), начиная от 2
+  */
+  $tableCellPadding: 16px;
+
+  td {
+    padding: $tableCellPadding * 2;
+    padding-bottom: $tableCellPadding * 4;
+    position: relative;
+  }
+
+  td::before {
+    content: '';
+    display: block;
+    height: calc(100% - 32px);
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: $brown;
+    z-index: 1;
+  }
+  td::after {
+    content: '';
+    display: block;
+    top: $tableCellPadding;
+    left: $tableCellPadding;
+    bottom: $tableCellPadding * 3;
+    right: $tableCellPadding;
+    border-radius: $tableCellPadding;
+    z-index: 2;
+
+    position: absolute;
+    background-color: $whiteLite;
+  }
+
+  td * {
+    position: relative;
+    z-index: 3;
+  }
+
+
+  .tcl h3, .tcr h3 {
+    margin-top: 0;
+  }
+
+  .tcl {
+    //display: block;
+    width: 60%;
+  }
+  .tcr {
+    //display: block;
+    width: 40%;
+  }
+
+  //временный стиль
+  .tc2 {
+    display: none;
+  }
+
+  //временный стиль
+  .tc3 {
+    display: none;
+  }
+
 }
