--- a/src/style/master/_crumbs1.scss
+++ b/src/style/master/_crumbs1.scss
@@ -1,8 +1,9 @@
-#pun-crumbs1 {
+.crumbs {
   font-style: italic;
 
   //Убираем надпись "Вы здесь"
-  p strong:first-child {
+  strong:first-child {
     display: none;
   }
 }
+
