--- a/src/style/master/_ulinks.scss
+++ b/src/style/master/_ulinks.scss
@@ -12,7 +12,7 @@
   }
 
   ul {
-    background-color: $whiteLite;
+    background-color: $light;
     list-style: none;
     padding: 0;
     margin: 0 auto;
