--- a/src/style/master/master.scss
+++ b/src/style/master/master.scss
@@ -7,3 +7,10 @@
 @import "break1";
 @import "crumbs1";
 @import "break2";
+@import "crumbs2";
+@import "about_";
+
+//сокращатель ссылок – убрать
+#qpsContainer {
+  display: none;
+}
