footer positioning fixed

--- a/src/style/master/_base.scss
+++ b/src/style/master/_base.scss
@@ -30,7 +30,7 @@ a {
   margin-bottom: 32px;
   position: relative;
 }
-#pun-index::after {
+#pun_wrap::after {
   content: '';
   display: block;
   clear: both;
